* Change descriptions of the "fast activate" keys to be easier to understand.
* Added "start-script-limit-value" option to GNUstepdefaults file for control
  over startUp script time limit.
* Brightened up lasers.
* Improved sun rendering.
* Implemented user-defined planet dark-side illumination color, when an
  illumination map is in use.
* Added an "update all" option to the Expansion Pack Manager.
* Updated atmosphere density rendering.
* Added game paused message to game options when in flight.
* (Windows/Linux) Physical and available system memory now reported in log header.
* (Windows) Required minimum OS is now Windows 7.
* Minimum OpenGL version is now 3.3.

Expansion Pack Development:
===========================

Modified Plists:
---------------
* keyconfig2.plist is the new keyboard configuration plist. keyconfig.plist
  has been deprecated.
* planetinfo.plist: illumination_color added (used with illumination map in planet
  texture).
* planetinfo.plist: added air_density (default value 0.75).
* equipment-overrides.plist: "name" and "description" properties are now available 
  for use in equipment-overrides.plist, as optional replacements for 
  "short_description" and "long_description" respectively, so as to match 
  EquipmentInfo specification.
* equipment.plist: hide_values allows an equipment item to hide the cost and 
  install time values on the F3 Ship Outfitting screen.

Scripting:
----------
* ship.canAwardEquipment now accepts optional additional parameter of "context", 
  enabling checking of any context for the equipment item.
* Added player.ship.previousSystem property, which contains the system ID of where
  the player as jumped from.
* shipWillExitWitchspace and shipExitedWitchspace world events now include the 
  jump cause parameter.
* Added beginGalacticHyperspaceCountdown world event.
* Added planet.illuminationColor property.
* Added planet.airDensity property.